# ItemsManager

./: .env.example  .gitignore  README.md  README_ukr.md  docker-compose.yaml  mongo-init.js  pyproject.toml
client/: Dockerfile  default.conf  package.json
client/public/: frame.css  index.html  manifest.json
client/src/: App.css  App.js  index.css  index.js
client/src/components/: CreateHandlerPlus.js  FileUploadForm.js  Footer.js  Header.js  HeaderMenu.js  HelpContent.js  ItemCaption.js  ItemInfo.js  ItemList.js  Login.js  LoginComponent.js  MessageHandler.js  Pagination.js  RootItemActions.js  SearchFilterBlock.js  TotalInfo.js  helpContentMessages.js  loader.js
client/src/components/auth/: actions.js  auth.module.css  context.js  reducer.js  utils.js
client/src/components/auth/Login/: LoginPage.js
client/src/pages/: DocPage.js  HelpPage.js  HomePage.js  ItemPage.js  LoginPage.js  Page404.js  RootUserPage.js
client/src/store/: store.js
client/src/utils/: constants.js  counters.js  fetch_utils.js
server/: Dockerfile  config.yaml  generate_static.py  logger_config.yaml  requirements.txt  tag_file_tpl.docx
server/app/: config.yaml  dependencies.py  docx_parser.py  logger_config.yaml  main.py
server/app/auth/: jwt_bearer.py  jwt_handler.py  routes.py  user.py  utils.py
server/app/dal/: mongo_manager.py  query_builder.py
server/app/file_manager/: file_manager.py  routes.py
server/app/items/: item.py  routes.py  schemas.py
server/app/qr_code_generator/: qr_generator.py
server/app/utils/: utils.py
